--- a/style.css
+++ b/style.css
@@ -65,3 +65,12 @@ nav a {
         margin-top: 30px;
     }
 }
+@media only screen and (min-width:577px) and (max-width:768px){
+    header, .section-one{
+        display: flex !important;
+        flex-direction: column !important;
+    }
+    .right-div{
+        margin-top: 30px;
+    }
+}
