--- a/style.css
+++ b/style.css
@@ -68,6 +68,9 @@ button {
   .right-div {
     margin-top: 30px;
   }
+  .right-div img{
+      width: 75%;
+  }
 }
 @media only screen and (min-width: 577px) and (max-width: 768px) {
   header,
@@ -95,20 +98,22 @@ button {
 }
 .popular-collections {
   display: grid;
+  justify-content: center;
+  align-items: center;
   grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 24px;
+  grid-column-gap: 10px;
 }
 .collection {
-  width: 329px;
-  height: 476px;
+  width: 300px;
+  height: 500px;
   background-color: #ffffff;
   border-radius: 10px;
-  box-shadow: 0px 0px 40px;
+  box-shadow: 5px 5px 30px 3px;
   padding: 10px;
   margin: 20px;
 }
 .collection .banner img {
-  width: 250px;
+  width: 300px;
   height: 230px;
   border-radius: 10px;
 }
@@ -131,17 +136,17 @@ button {
   .section-two {
     width: 100%;
   }
-  .popular-collections{
+  .popular-collections {
     grid-template-columns: repeat(1, 1fr);
     flex-direction: column;
   }
 }
 @media only screen and (min-width: 577px) and (max-width: 768px) {
-    .section-two {
-        width: 100%;
-      }
-      .popular-collections{
-        grid-template-columns: repeat(1, 1fr);
-        flex-direction: column;
-      }
+  .section-two {
+    width: 100%;
+  }
+  .popular-collections {
+    grid-template-columns: repeat(1, 1fr);
+    flex-direction: column;
+  }
 }
