--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ button {
     width: 100%;
   }
   .popular-collections {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     flex-direction: column;
   }
 }
@@ -162,38 +162,49 @@ button {
   margin-bottom: 30px;
 }
 .left-div-three{
-    width: 40%;
+    width: 50%;
     margin-left: 70px;
  
   }
 .right-div-three{
     width: 50%;
   }
+  .bottom-style{
+    text-align: center;
+    padding: 15px;
+    margin-top: 60px;
+    background-color: #0A0826;
+    color: #FFFFFF;
+}
  
   /* media query section three*/
   @media only screen and (max-width: 576px) {
     .section-three {
       display: flex;
       flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
     .left-div-three {
-      width: 90%;
+      width: 100%;
        margin-left: 0px;
-       margin-right: 10px;
+       /* margin-right: 10px; */
+    }
+    .left-div-three iframe{
+        width: 410px !important;
     }
   }
   @media only screen and (min-width: 577px) and (max-width: 768px) {
     .section-three {
       display: flex;
       flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .left-div-three{
+        margin-left: 0;
     }
   }
+  
 
   /* style footer   */
-  .bottom-style{
-      text-align: center;
-      padding: 15px;
-      margin-top: 60px;
-      background-color: #0A0826;
-      color: #FFFFFF;
-  }
