--- a/style.css
+++ b/style.css
@@ -124,8 +124,11 @@ button {
 .fa-star.empty {
   color: #aeaeae;
 }
+/* speacial btn style  */
 .speacial-btn{
     text-align: right;
+    width: 78%;
+    margin: 10px auto;
 }
 .link-btn{
     text-decoration: none;
